<resources>
    <string name="app_name">EmiApp</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="MyApp">Nice to see you again</string>
    <string name="LoginButton">Login</string>
    <string name="AlreadyRegiser">Sei già registrato?</string>
    <string name="RegistrationButton">Registrati</string>
    <string name="welcome">Welcome!</string>
    <string name="AddHeadache">Aggiungi nuovo
        attacco</string>
    <string name="intro">Ora di inizio e ora di fine dell\'attacco</string>
    <string name="Begin">Ora di inizio:</string>
    <string name="End">Ora di fine:</string>
    <string name="startButton">Data inizio:</string>
    <string name="startTimebutton">Ora inizio:</string>
    <string name="endButton">Data fine:</string>
    <string name="endTimebutton">Ora fine:</string>
    <string name="next"><![CDATA[>]]></string>
    <string name="previous"><![CDATA[<]]></string>
    <string name="addeddata">Attacco registrato correttamente!</string>
    <string name="errorData">%1$s</string>
    <string name="resume">Riepilogo:</string>
    <string name="virgola">,</string>
    <string name="Save">Conferma</string>
    <string name="Duration">Durata:</string>
    <string name="introType">Qual è il tipo di attacco?</string>
    <string name="emicrania">emicrania</string>
    <string name="cefalea">cefalea</string>
    <string name="grappolo">emicrania\n a grappolo</string>
    <string name="insertEndDate">Inserire la data della fine dell\'attacco</string>
    <string name="insertEndTime">Inserire l\'ora della fine dell\'attacco</string>
    <string name="alertDuration">Attenzione! La durata dell\'attacco è nulla</string>
    <string name="alertDays">Attenzione! Il momento di ifne attacco precede quello di inizio</string>
    <string name="plus">+</string>
    <string name="TypeHeadAche">Tipo:</string>
    <string name="introSymptoms">Stai avendo uno di questi sintomi?</string>
    <string name="nothing">niente</string>
    <string name="dullPain">dolore sordo</string>
    <string name="throbbingPain">dolore pulsante</string>
    <string name="nausea">nausea</string>
    <string name="insertNewSymptom">Inserisci sintomo</string>
    <string name="insertNewType">Inserisci nome tipo</string>
    <string name="symptomsHeadHache">Sintomi:</string>
    <string name="delete">elimina</string>
    <string name="alertDeleteText">Confermi di voler eliminare?</string>
    <string name="headTime">"Non hai un attacco da "</string>
    <string name="channel_name">Mal di testa</string>
    <string name="channel_description">Non hai un mal di testa da 3 giorni!</string>
    <string name="notificationDialog">Abbiamo bisogno di invianrti le notifiche per tenere traccia del tuo percorso! Consenti a EmiApp di inivarti le notifiche?</string>
    <string name="requestPermission">Richiesta di permessi</string>
    <string name="commento">Commento: </string>
    <string name="livello_di_dolore">Livello di dolore: </string>
    <string name="open_nav">Open Navigation Drawer</string>
    <string name="close_nav">Close Navigation Drawer</string>
    <string name="livello_dolore">livello di dolore diminuito</string>
    <string name="attacco_terminato">l\'attacco sembra essere terminato</string>
    <string name="sintomo_ridotto">questo sintomo si è ridotto d\'intensità</string>
    <string name="cambia_password"><u>Cambia password</u></string>
    <string name="title_activity_profile">ProfileActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="data_inizio">Data inizio:</string>
    <string name="ora_inizio">Ora inizio:</string>
    <string name="data_fine">Data fine:</string>
    <string name="ora_fine">Ora fine:</string>
    <string name="tipologia">Tipologia:</string>
    <string name="sintomi">Sintomi:</string>
    <string name="dolore">Dolore:</string>
    <string name="commentodata">Commento:</string>
    <string name="password_dimenticata">Password Dimenticata</string>
    <string name="inserisci_il_tuo_indirizzo_e_mail">Inserisci il tuo indirizzo E-mail</string>
    <string name="cancella">Cancella</string>
    <string name="resetta">Resetta</string>
    <string name="logout">Logout</string>
    <string name="cancella1">Cancella</string>
    <string name="conferma">Conferma</string>
    <string name="elimina">Elimina</string>
    <string name="cancella2">Cancella</string>
    <string name="conferma2">Conferma</string>
    <string name="inserisci_sintomo">Inserisci Sintomo</string>
    <string name="inserisci_tipo">Inserisci Tipo</string>
    <string name="name">Nome</string>
    <string name="sesso">Sesso</string>
    <string name="data_di_nascita">Data di nascita</string>
    <string name="salva">Salva</string>
    <string name="password_dimenticata1">Password dimenticata?</string>
    <string name="non_ancora_registrato">Non ancora registrato?</string>
    <string name="ti_piacerebbe_aggiungere_un_commento">Ti piacerebbe aggiungere un commento?</string>
    <string name="data_corrente">data corrente</string>
    <string name="orario_corrente">orario corrente</string>
    <string name="nessun_dolore">Nessun dolore</string>
    <string name="vecchia_password">Vecchia Password</string>
    <string name="nuova_password">Nuova Password</string>
    <string name="conferma_nuova_password">Conferma Nuova Password</string>
    <string name="cambia_password3">Cambia Password</string>
    <string name="registrazione">Registrazione</string>
    <string name="sei_gi_registrato">Sei già registrato?</string>
    <string name="durata">Durata:</string>
    <string name="livello_di_dolore2">Livello di dolore:</string>
    <string name="tipo_di_attacco">Tipo di attacco:</string>
    <string name="sintomi2">Sintomi:</string>
    <string name="commento3">Commento:</string>
    <string name="conferma3">conferma</string>
    <string name="lingua_npredefinita">Lingua\npredefinita</string>
    <string name="lingua">Lingua</string>
    <string name="volume">Volume</string>
    <string name="notifiche">Sistema</string>
    <string name="preferenze">Preferenze</string>
    <string name="e_mail">E-mail</string>
    <string name="name1">Name</string>
    <string name="sesso1">Sesso</string>
    <string name="data_di_nascita1">Data di nascita</string>
    <string name="caricamento">Caricamento...</string>
    <string name="home">Home</string>
    <string name="profile">Profilo</string>
    <string name="cambio_password">Cambio Password</string>
    <string name="contattaci">Contattaci</string>
    <string name="condividi">Condividi</string>
    <string name="termini_amp_condizioni"><![CDATA[Termini & Condizioni]]></string>
    <string name="privacy">Privacy</string>
    <string name="accetta">Accetta</string>
    <string name="rifiuta">Rifiuta</string>
    <string name="descrione_dei_termini_e_delle_condizioni">Descrione dei termini e delle condizioni</string>
    <string name="termini_amp_condizioni1"><![CDATA[Termini & Condizioni]]></string>
    <string name="curentDate">Data registrazione attacco:</string>
    <string name="currentTime">Ora registrazione attacco:</string>
    <string name="notValid">Orario non valido!</string>
    <string name="logoutSuccess">Logout effettuato con successo!</string>
    <string name="day">giorno</string>
    <string name="days">giorni</string>
    <string name="hour">ora</string>
    <string name="hours">ore</string>
    <string name="minute">minuto</string>
    <string name="minutes">minuti</string>
    <string name="noAttach">Non hai ancora avuto un attacco!</string>
    <string name="oneMinute">1 minuto</string>
    <string name="checkemail">Controlla la tua mail</string>
    <string name="insertEmail">Inserire la mail</string>
    <string name="insertPassword">Inserire la password</string>
    <string name="insertValidEmail">Inserire una mail valida</string>
    <string name="successLogin">Login effettuato con successo</string>
    <string name="paindim">Il livello di dolore è diminuito</string>
    <string name="endAttach">L\'attacco sembra essere terminato</string>
    <string name="endSymp">"Questo sintomo è diminuito di intensità: "</string>
    <string name="noPain">Nessun dolore</string>
    <string name="mild">Dolore lieve</string>
    <string name="moderate">Dolore moderato</string>
    <string name="severe">Dolore intenso</string>
    <string name="intense">Dolore molto intenso</string>
    <string name="passwordChanged">Password cambiata!</string>
    <string name="reauthFailed">Reautenticazione fallita!</string>
    <string name="passwNotEqual">Le password non combaciano</string>
    <string name="compileAll">Compilare tutti i campi</string>
    <string name="enterEmail">Inserire una mail</string>
    <string name="enterPassword">Inserire la password</string>
    <string name="eightChar">Inserire almeno 8 caratteri</string>
    <string name="regSuccess">Resistrazione effettuata con successo!</string>
    <string name="noType">Nessun tipo di attacco selezionato</string>
    <string name="noSymp">Nessun sintomo selezionato</string>
    <string name="noComment">Nessun commento</string>
    <string name="cancelled">Attacco eliminato</string>
    <string name="noImage">Nessuna immagine selezionata</string>
    <string name="dataSaved">Salvataggio dati avvenuto</string>
    <string name="migraine">emicrania</string>
    <string name="weakP">Password debole</string>
    <string name="mediumP">Password media</string>
    <string name="strongP">Password forte</string>
    <string name="bulletP">Password molto forte</string>
    <string name="sureExit">Sei sicuro di voler uscire?</string>
    <string name="loading">Caricamento</string>
    <string name="symp">Sintomo</string>
    <string name="type">Tipo</string>
    <string name="writecomment">Scrivi un commento</string>
    <string name="oldPass">vecchia password</string>
    <string name="newpass">nuova password</string>
    <string name="nightMode">Modalità scura</string>
    <string name="option">opzionale</string>
    <string name="modify">Modifica dati</string>
    <string name="painlevel">Qual è il livello di dolore raggiunto in questo attacco?</string>
    <string name="settings">Opzioni</string>
    <string name="chagep">Cambio Password</string>

</resources>