<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragments.DateFragment">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:orientation="vertical"
        android:layout_marginTop="5dp"
        android:id="@+id/seekbar">

        <TextView
            android:id="@+id/progressDate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="1/5"
            android:gravity="center"
            android:textSize="15sp"
            android:textColor="@color/celeste"/>

        <ProgressBar
            android:id="@+id/progressBar"
            android:layout_width="300dp"
            android:layout_height="32dp"
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_gravity="center"
            android:progressTint="@color/celeste"/>
    </LinearLayout>


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_marginTop="75dp"
        android:focusableInTouchMode="true"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="@+id/progressBar"
        app:layout_constraintStart_toStartOf="@+id/progressBar"
        app:layout_constraintTop_toBottomOf="@+id/progressBar">

        <TextView
            android:id="@+id/titleType"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor = "?android:textColorPrimary"
            android:text="@string/intro"
            android:textSize="25sp" />

        <TableLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="40dp"
            android:padding="20dp"
            android:background="@drawable/border1"
            >

            <TableRow>

                <TextView
                    android:layout_span="2"
                    android:text="@string/Begin"
                    android:textColor="@color/celestescuro"
                    android:textSize="20sp"/>

            </TableRow>

            <TableRow>

                <TextView
                    android:id="@+id/beginDate"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="10dp"
                    android:text=""
                    android:textColor="@color/celeste"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/begindHour"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="10dp"
                    android:text=""
                    android:textColor="@color/celeste"
                    android:textSize="20dp" />
            </TableRow>

            <TableRow>

                <Button
                    android:id="@+id/beginDateButton"
                    android:layout_height="67dp"
                    android:layout_marginRight="10dp"
                    android:backgroundTint="@color/celeste"
                    android:text="@string/startButton"
                    app:cornerRadius="20dp"
                    />

                <Button
                    android:id="@+id/beginHourButton"
                    android:layout_height="67dp"
                    android:layout_marginLeft="10dp"
                    android:backgroundTint="@color/celeste"
                    android:text="@string/startTimebutton"
                    app:cornerRadius="20dp" />
            </TableRow>
        </TableLayout>

        <TableLayout
            android:layout_width="302dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:padding="20dp"
            android:background="@drawable/border1">

            <TableRow>

                <TextView
                    android:layout_span="2"
                    android:text="@string/End"
                    android:textColor="@color/celestescuro"
                    android:textSize="20sp"/>

            </TableRow>

            <TableRow>

                <TextView
                    android:id="@+id/endDate"
                    android:layout_marginTop="10dp"
                    android:layout_marginRight="10dp"
                    android:text=""
                    android:textColor="@color/celeste"
                    android:textSize="20dp" />

                <TextView
                    android:id="@+id/endHour"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="10dp"
                    android:text=""
                    android:textColor="@color/celeste"
                    android:textSize="20dp" />
            </TableRow>

            <TableRow>

                <Button
                    android:id="@+id/endDateButton"
                    android:layout_height="67dp"
                    android:layout_marginRight="10dp"
                    android:backgroundTint="@color/celeste"
                    android:text="@string/endButton"
                    app:cornerRadius="20dp" />

                <Button
                    android:id="@+id/endHourButton"
                    android:layout_height="67dp"
                    android:layout_marginLeft="10dp"
                    android:backgroundTint="@color/celeste"
                    android:text="@string/endTimebutton"
                    app:cornerRadius="20dp" />
            </TableRow>
        </TableLayout>


    </LinearLayout>
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:orientation="horizontal">

        <Button
            android:id="@+id/prevButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|left"
            android:layout_marginStart="10dp"
            android:text="@string/previous" />

        <Button
            android:id="@+id/nextButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|right"
            android:layout_marginEnd="10dp"
            android:text="@string/next" />

    </FrameLayout>

</FrameLayout>