<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragments.TypeFragment">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="5dp"
        android:id="@+id/seekbar">

        <TextView
            android:id="@+id/progressDate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="2/5"
            android:gravity="center"
            android:textSize="15sp"
            android:textColor="@color/celeste"/>

        <ProgressBar
            android:id="@+id/progressBar"
            android:layout_width="300dp"
            android:layout_height="40dp"
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_gravity="center"
            android:progressTint="@color/celeste"/>
    </LinearLayout>




    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp">
        <LinearLayout
            android:id="@+id/linear"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <TextView
                android:id="@+id/titleType"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor = "?android:textColorPrimary"
                android:layout_marginTop="30dp"
                android:text="@string/introType"
                android:textSize="25sp" />


            <com.google.android.flexbox.FlexboxLayout
                android:id="@+id/containerTypeFlex"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:flexWrap="wrap"
                app:alignItems="stretch"
                app:alignContent="stretch"
                android:padding="10dp"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp">


                <CheckBox
                    android:id="@+id/emicrania"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:drawableTop="@drawable/migranecheck"
                    android:drawableTint="@color/celestescuro"
                    android:button="@null"
                    android:padding="10dp"
                    android:text="@string/emicrania"
                    android:textColor="@color/black"
                    android:textSize="18sp"/>


                <CheckBox
                    android:id="@+id/cefalea"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:drawableTop="@drawable/migranecheck"
                    android:drawableTint="@color/celestescuro"
                    android:button="@null"
                    android:padding="10dp"
                    android:text ="@string/cefalea"
                    android:textSize="18sp"
                    android:textColor="@color/black"
                    />


                <CheckBox
                    android:id="@+id/grappolo"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:button="@null"
                    android:drawableTop="@drawable/migranecheck"
                    android:drawableTint="@color/celestescuro"
                    android:gravity="center_horizontal"
                    android:padding="10dp"
                    android:text="@string/grappolo"
                    android:textColor="@color/black"
                    />


            </com.google.android.flexbox.FlexboxLayout>

            <Button
                android:id="@+id/plusButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/plus"
                android:layout_marginStart="10dp"
                />
        </LinearLayout>




    </ScrollView>



    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal"
        android:layout_gravity="bottom">

        <Button
            android:id="@+id/prevButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|left"
            android:layout_marginStart="10dp"
            android:text="@string/previous"/>

        <Button
            android:id="@+id/nextButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|right"
            android:layout_marginEnd="10dp"
            android:text="@string/next" />

    </FrameLayout>



</FrameLayout>